# qwrapper

./: README.md  pyproject.toml  setup.py
.github/workflows/: build-and-test.yml  publish.yml  python-publish.yml
qwrapper/: qemumachine.py  qwrapper.py  x86machine.py
qwrapper/utils/x86/: registers.py
qwrapper/x86/: utils.py  x86machine.py
qwrapper/x86/utils/: debugging.py  memory.py  registers.py
tests/: disk.iso  disk2.iso  test_qwrapper.py  test_qwrapper_x86.py
