[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
name = "qwrapper"
version = "0.1.13"
description = "A QEMU wrapper for Python"
author = "Daniel Dybing"
author_email = "danieldy@uia.no"

[project]
dependencies = [
    "pygdbmi>=0.10.0.0",
    "qemu.qmp>=0.5.0"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
]
